[package]
name = "implementing_tls"
version = "0.1.0"
authors = ["lkitching <lee.kitching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"

[[bin]]
name="http_client"
path="src/http_client/main.rs"

[[bin]]
name="des"
path="src/des/main.rs"