[package]
name = "implementing_tls"
version = "0.1.0"
authors = ["lkitching <lee.kitching@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
clap = { version = "3.1.6", features = ["derive"] }
hex = "0.4.3"
num_enum = "0.5.7"
chrono = "0.4.23"

[[bin]]
name="http_client"
path="src/http_client/main.rs"

[[bin]]
name="des"
path="src/des/main.rs"

[[bin]]
name="aes"
path="src/aes/main.rs"

[[bin]]
name="rc4"
path="src/rc4/main.rs"

[[bin]]
name="rsa"
path="src/rsa/main.rs"

[[bin]]
name="digest"
path="src/digest/main.rs"

[[bin]]
name="dsa"
path="src/dsa/main.rs"

[[bin]]
name="asn1"
path="src/asn1/main.rs"

[[bin]]
name="x509"
path="src/x509/main.rs"